<resources>
    <string name="app_name">HomeGo</string>

    <!--Connection-->
    <string name="warning">Warning</string>
    <string name="need_permissions">Permissions needed by this application are not granted</string>
    <string name="need_internet">No internet connection</string>

    <!--Menu-->
    <string name="nav_drawer_open">Open drawer</string>
    <string name="nav_drawer_close">Close drawer</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="about">About</string>

    <!--Fragments-->
    <string name="location">Location</string>
    <string name="bookmark">Bookmark</string>
    <string name="pictures">Pictures</string>
    <string name="details">Details</string>

    <!--Bookmark Fragment-->
    <string name="no_bookmarks">You have no Bookmarks</string>

    <!--Details Fragment-->
    <string name="rooms">Rooms</string>
    <string name="surface">Surface</string>
    <string name="balcony">Balcony</string>

    <!--About Fragment-->
    <string name="email" translatable="false">sergiu@serj.ro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
